# mcp-gh-project

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  mcp-config-example.json  package.json  pyproject.toml
src/mcp_gh_project/: __init__.py  __main__.py  github_client.py  server.py  tools.py
tests/: test_compile.py  test_mcp_protocol.py  test_server.py
